[package]
authors = [
  "Zeki Sherif <zekshi@amazon.com>",
  "Tokio Contributors <team@tokio.rs>",
]
categories = [
  "development-tools::debugging",
  "asynchronous",
]
description = """
Provides utilities for file appenders and making non-blocking writers.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["logging", "tracing", "file-appender", "non-blocking-writer"]
license = "MIT"
name = "tracing-appender"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.53.0"
version = "0.2.0"

[dependencies]
crossbeam-channel = "0.5.0"
parking_lot = {optional = true, version = "0.11.2"}
time = {version = "0.3", default-features = false, features = ["formatting"]}

[dependencies.tracing-subscriber]
default-features = false
features = ["fmt", "std"]
path = "../tracing-subscriber"
version = "0.3"

[dev-dependencies]
tempfile = "3"
time = {version = "0.3", default-features = false, features = ["formatting", "parsing"]}
tracing = {path = "../tracing"}
