[package]
name = "tracing-attributes"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
authors = [
  "Tokio Contributors <team@tokio.rs>",
  "Eliza Weisman <eliza@buoyant.io>",
  "David Barsky <dbarsky@amazon.com>",
]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
]
description = """
Procedural macro attributes for automatically instrumenting functions.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.1.18"

[lib]
proc-macro = true

[features]

# This feature flag is no longer necessary.
async-await = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "1", default-features = false, features = ["full", "parsing", "printing", "visit", "visit-mut", "clone-impls", "extra-traits", "proc-macro"]}

[dev-dependencies]
async-trait = "0.1.44"
tokio-test = {version = "0.2.0"}
tracing = {path = "../tracing"}
tracing-core = {path = "../tracing-core"}

[badges]
maintenance = {status = "experimental"}
