[package]
name = "tracing-error"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag
authors = [
  "Eliza Weisman <eliza@buoyant.io>",
  "Jane Lusby <jlusby@yaah.dev>",
  "Tokio Contributors <team@tokio.rs>",
]
categories = [
  "development-tools::debugging",
  "rust-patterns",
]
description = """
Utilities for enriching errors with `tracing`.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = [
  "tracing",
  "error-handling",
  "exception-reporting",
  "backtrace",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.2.0"

[features]
default = ["traced-error"]
traced-error = []

[dependencies]
tracing = {path = "../tracing", default-features = false, features = ["std"]}
tracing-subscriber = {path = "../tracing-subscriber", default-features = false, features = ["registry", "fmt"]}

[badges]
maintenance = {status = "experimental"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
