[package]
authors = [
  "Jane Lusby <jlusby@yaah.dev>",
  "Tokio Contributors <team@tokio.rs>",
]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
]
description = """
Tracing layer for creating flamegraphs from span timings
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["tracing", "subscriber", "flamegraph", "profiling"]
license = "MIT"
name = "tracing-flame"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.2.0"

[features]
default = ["smallvec"]
smallvec = ["tracing-subscriber/smallvec"]

[dependencies]
lazy_static = "1.3.0"
tracing = {path = "../tracing", default-features = false, features = ["std"]}
tracing-subscriber = {path = "../tracing-subscriber", default-features = false, features = ["registry", "fmt"]}

[dev-dependencies]
tempfile = "3"
