[package]
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
]
description = """
Utilities for instrumenting `futures` with `tracing`.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["logging", "profiling", "tracing", "futures", "async"]
license = "MIT"
name = "tracing-futures"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.2.5"

[features]
default = ["std-future", "std"]
futures-01 = ["futures_01", "std"]
futures-03 = ["std-future", "futures", "futures-task", "std"]
std = ["tracing/std"]
std-future = ["pin-project-lite"]

[dependencies]
futures = {version = "0.3.0", optional = true}
futures-task = {version = "0.3", optional = true}
futures_01 = {package = "futures", version = "0.1", optional = true}
pin-project-lite = {version = "0.2.4", optional = true}
tokio = {version = "0.1", optional = true}
tokio-executor = {version = "0.1", optional = true}
tracing = {path = "../tracing", default-features = false}

[dev-dependencies]
tokio = "0.1.22"
tokio-test = "0.2"
tracing-core = {path = "../tracing-core"}

[badges]
maintenance = {status = "actively-developed"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
