[package]
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
]
description = "rich journald subscriber for `tracing`"
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["tracing", "journald"]
license = "MIT"
name = "tracing-journald"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.2.2"

[dependencies]
libc = "0.2.107"
tracing-core = {path = "../tracing-core"}
tracing-subscriber = {path = "../tracing-subscriber"}

[dev-dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tracing = {path = "../tracing"}
