[package]
authors = ["Tokio Contributors <team@tokio.rs>"]
categories = [
  "development-tools::debugging",
  "asynchronous",
]
description = """
Provides compatibility between `tracing` and the `log` crate.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["logging", "tracing", "log"]
license = "MIT"
name = "tracing-log"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.1.2"

[features]
default = ["log-tracer", "trace-logger", "std"]
interest-cache = ["lru", "ahash"]
log-tracer = []
std = ["log/std"]
trace-logger = []

[dependencies]
ahash = {version = "0.7.4", optional = true}
env_logger = {version = "0.7", optional = true}
lazy_static = "1.3.0"
log = {version = "0.4"}
lru = {version = "0.7.0", optional = true}
tracing-core = {path = "../tracing-core"}

[dev-dependencies]
criterion = {version = "0.3", default_features = false}
tracing = {path = "../tracing"}
tracing-subscriber = {path = "../tracing-subscriber"}

[badges]
maintenance = {status = "actively-maintained"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "logging"
