[package]
authors = [
  "Julian Tescher <julian@tescher.me>",
  "Tokio Contributors <team@tokio.rs>",
]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
]
description = "OpenTelemetry integration for tracing"
edition = "2018"
homepage = "https://github.com/tokio-rs/tracing/tree/master/tracing-opentelemetry"
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "async"]
license = "MIT"
name = "tracing-opentelemetry"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.16.0"

[features]
default = ["tracing-log"]

[dependencies]
opentelemetry = {version = "0.16", default-features = false, features = ["trace"]}
tracing = {path = "../tracing", default-features = false, features = ["std"]}
tracing-core = {path = "../tracing-core"}
tracing-log = {path = "../tracing-log", default-features = false, optional = true}
tracing-subscriber = {path = "../tracing-subscriber", default-features = false, features = ["registry", "std"]}

[dev-dependencies]
async-trait = "0.1"
criterion = {version = "0.3", default_features = false}
opentelemetry-jaeger = "0.15"

[lib]
bench = false

[[bench]]
harness = false
name = "trace"
