[package]
authors = [
  "Eliza Weisman <eliza@buoyant.io>",
  "David Barsky <me@davidbarsky.com>",
  "Tokio Contributors <team@tokio.rs>",
]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
]
description = """
Utilities for implementing and composing `tracing` subscribers.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["logging", "tracing", "metrics", "subscriber"]
license = "MIT"
name = "tracing-subscriber"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.3.7"

[features]

alloc = []
ansi = ["fmt", "ansi_term"]
default = ["smallvec", "fmt", "ansi", "tracing-log", "std"]
env-filter = ["matchers", "regex", "lazy_static", "tracing", "std"]
fmt = ["registry", "std"]
json = ["tracing-serde", "serde", "serde_json"]
registry = ["sharded-slab", "thread_local", "std"]
std = ["alloc", "tracing-core/std"]
# Enables support for local time when using the `time` crate timestamp
# formatters.
local-time = ["time/local-offset"]

[dependencies]
tracing-core = {path = "../tracing-core", version = "0.1.20"}

# only required by the filter feature
lazy_static = {optional = true, version = "1"}
matchers = {optional = true, version = "0.1.0"}
regex = {optional = true, version = "1", default-features = false, features = ["std"]}
smallvec = {optional = true, version = "1"}
tracing = {optional = true, path = "../tracing", version = "0.1", default-features = false}

# fmt
ansi_term = {version = "0.12", optional = true}
time = {version = "0.3", features = ["formatting"], optional = true}
tracing-log = {path = "../tracing-log", version = "0.1.2", optional = true, default-features = false, features = ["log-tracer", "std"]}

# only required by the json feature
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
tracing-serde = {path = "../tracing-serde", version = "0.1.2", optional = true}

# opt-in deps
parking_lot = {version = ">= 0.7, <= 0.11", optional = true}

# registry
sharded-slab = {version = "0.1.0", optional = true}
thread_local = {version = "1.1.4", optional = true}

[dev-dependencies]
criterion = {version = "0.3", default_features = false}
log = "0.4"
regex = {version = "1", default-features = false, features = ["std"]}
tokio = {version = "0.2", features = ["rt-core", "macros"]}
tracing = {path = "../tracing", version = "0.1"}
tracing-futures = {path = "../tracing-futures", version = "0.2", default-features = false, features = ["std-future", "std"]}
tracing-log = {path = "../tracing-log", version = "0.1.2"}
# Enable the `time` crate's `macros` feature, for examples.
time = {version = "0.3", features = ["formatting", "macros"]}

[badges]
maintenance = {status = "experimental"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "filter"

[[bench]]
harness = false
name = "filter_log"

[[bench]]
harness = false
name = "fmt"

[[bench]]
harness = false
name = "enter"
