[package]
authors = ["Eliza Weisman <eliza@buoyant.io>"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
]
description = """
Compatibility with the `tower` ecosystem.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["logging", "tracing"]
license = "MIT"
name = "tracing-tower"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.1.0"

[features]
default = ["tower-layer", "tower-make"]
tower-make = [
  "tower_make",
  "pin-project-lite",
]

[dependencies]
futures = "0.3"
http = {version = "0.2", optional = true}
pin-project-lite = {version = "0.2.4", optional = true}
tower-layer = {version = "0.3", optional = true}
tower-service = "0.3"
tower_make = {package = "tower-make", version = "0.3", optional = true}
tracing = {path = "../tracing", default-features = false, features = ["std"]}
tracing-futures = {path = "../tracing-futures", features = ["std-future"]}

[badges]
maintenance = {status = "experimental"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
