[package]
name = "tracing"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
  "no-std",
]
description = """
Application-level tracing for Rust.
"""
edition = "2018"
homepage = "https://tokio.rs"
keywords = ["logging", "tracing", "metrics", "async"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
rust-version = "1.42.0"
version = "0.1.29"

[dependencies]
cfg-if = "1.0.0"
log = {version = "0.4", optional = true}
pin-project-lite = "0.2"
tracing-attributes = {path = "../tracing-attributes", optional = true}
tracing-core = {path = "../tracing-core", default-features = false}

[dev-dependencies]
criterion = {version = "0.3", default_features = false}
futures = "0.1"
log = "0.4"
tokio = {version = "0.2.21", features = ["rt-core"]}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3"

[features]
default = ["std", "attributes"]

max_level_debug = []
max_level_error = []
max_level_info = []
max_level_off = []
max_level_trace = []
max_level_warn = []

release_max_level_debug = []
release_max_level_error = []
release_max_level_info = []
release_max_level_off = []
release_max_level_trace = []
release_max_level_warn = []

# This feature flag is no longer necessary.
async-await = []

attributes = ["tracing-attributes"]
log-always = ["log"]
std = ["tracing-core/std"]
valuable = ["tracing-core/valuable"]

[[bench]]
harness = false
name = "subscriber"

[[bench]]
harness = false
name = "no_subscriber"

[badges]
maintenance = {status = "actively-developed"}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
